# dynamic-dispatch-waves

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Environment.py  LICENSE.md  README.md  Transportation-Science-template.tex  VrpInstance.py  benchmark.py  benchmark_dynamic.py  benchmark_dynamic_competition.py  environment.py  environment_competition.py  hgspy.py  informs2014trsc.bst  informs3.cls  instance2data.py  main.tex  plotting.py  pyproject.toml  setup.cfg  solver.py  tools.py
agents/: Agent.py  IterativeConditionalDispatch.py  PrizeCollecting.py  RandomDispatch.py  RollingHorizon.py  __init__.py  sample_scenario.py
benchmark/: base.py  euro_neurips.py  limited_fleet.py  paper.py
configs/: adaptive_threshold.toml  benchmark_dynamic.toml  branch_and_regret.toml  dispatch.toml  dispatch_only.toml  dynamic.toml  dynamic_stochastic_hedging_heuristic.toml  fixed_threshold.toml  fixed_treshold.toml  greedy.toml  hamming_distance.toml  icd-adaptive-threshold.toml  icd-dispatch-only.toml  icd-double-threshold.toml  icd-dshh.toml  icd-hamming-distance.toml  icd-postpone-only.toml  icd-prize-collecting.toml  icd-rolling-horizon.toml  icd-test.toml  lazy.toml  nearest_neighbour.toml  postpone_only.toml  rolling-horizon.toml  simulation.toml  uniform.toml
data/: benchmark.csv  euro-neurips.csv  limited-fleet.csv
ddwp/: Environment.py  VrpInstance.py  read.py
environments/: Environment.py  EnvironmentCompetition.py  EuroNeurips.py  __init__.py
experiments/: base.py  euro_neurips.py  limited_fleet.py  paper.py
instances/: README.md
notebooks/: benchmark.ipynb  euro_neurips.ipynb  limited_fleet.ipynb
plot/: __init__.py  plot_dynamic_instance.py  plot_incumbents.py  plot_instance.py  plot_objectives.py  plot_population.py  x_axis.py
plotting/: __init__.py  plot_dynamic_instance.py
pyvrp/: Model.py  _pyvrp.pyi  read.py
sampling/: SamplingMethod.py  __init__.py  custom_time_windows.py  euro_neurips.py  new_sampler.py  sample_epoch_requests.py
sections/: introduction.tex  problem-description.tex
static_solvers/: __init__.py  default_solver.py  instance2data.py  scenario_solver.py
strategies/: Agent.py  IterativeConditionalDispatch.py  RandomDispatch.py  __init__.py  baselines.py  config.py  instance2data.py  simulate_instance.py  solve_dynamic.py  solve_hindsight.py  statistics.py  utils.py
tools/: __init__.py  filter_instance.py  instance2data.py  io.py  read.py  subsequences.py  validation.py
tune/: benchmark_static.py  make_static_parameters.py  static-tuning.ipynb
utils/: __init__.py  (+3 more)
(+366 files in other folders)
