[tool.poetry]
name = "dynamic-dispatch-waves"
version = "0.1.0"
description = ""
authors = [
    "Lan, Leon <l.lan@vu.nl>",
    "Doorn, Jasper van <j.m.h.van.doorn@vu.nl>",
    "Wouda, Niels <n.a.wouda@rug.nl>",
]
license = "MIT"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.9, <4.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
tomli = "^2.0.1"
tqdm = "^4.64.0"
vrplib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"


[tool.black]
line-length = 79
exclude = '''
hgs_vrptw
'''

[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "E741",  # ambiguous variable name
    "B905",  # zip without explicit ``strict=``
]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
